<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.simplefootballstats.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/small_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/team_a"
                    android:textColor="@android:color/holo_blue_dark" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/team_b"
                    android:textColor="@android:color/holo_red_dark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/small_padding">

                <TextView
                    android:id="@+id/teamAGoal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="@dimen/text_normal"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/teamBGoal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="@dimen/text_normal"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="goalA"
                    android:text="@string/Goal" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="goalB"
                    android:text="@string/Goal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="goalshotsA"
                    android:text="@string/Shots_on_goal" />

                <TextView
                    android:id="@+id/countGoalshotsA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_smaller"
                    android:layout_marginRight="@dimen/margin_small"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/holo_blue_dark" />

                <TextView
                    android:id="@+id/countgGoalshotsB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_smaller"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/holo_red_dark" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="goalshotsB"
                    android:text="@string/Shots_on_goal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="goaloffA"
                    android:text="@string/Shots_off_goal" />

                <TextView
                    android:id="@+id/statgoaloffA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_smaller"
                    android:layout_marginRight="@dimen/margin_small"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/holo_blue_dark" />

                <TextView
                    android:id="@+id/statgoaloffB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_smaller"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/holo_red_dark" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="goaloffB"
                    android:text="@string/Shots_off_goal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="bShotsA"
                    android:text="@string/Blocked_shots" />

                <TextView
                    android:id="@+id/statbShotsA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_smaller"
                    android:layout_marginRight="@dimen/margin_small"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/holo_blue_dark" />

                <TextView
                    android:id="@+id/statbShotsB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_smaller"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/holo_red_dark" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="bShotsB"
                    android:text="@string/Blocked_shots" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="BoffsidesA"
                    android:text="@string/Offsides" />

                <TextView
                    android:id="@+id/statoffsidesA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_smaller"
                    android:layout_marginRight="@dimen/margin_small"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/holo_blue_dark" />

                <TextView
                    android:id="@+id/statoffsidesB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_smaller"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/holo_red_dark" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="BoffsidesB"
                    android:text="@string/Offsides" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="kicksA"
                    android:text="@string/Free_kicks" />

                <TextView
                    android:id="@+id/statKicksA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="@dimen/margin_smaller"

                    android:layout_marginRight="@dimen/margin_small"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/holo_blue_dark" />

                <TextView
                    android:id="@+id/statKicksB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_smaller"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/holo_red_dark" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="kicksB"
                    android:text="@string/Free_kicks" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="cornersA"
                    android:text="@string/Corners" />

                <TextView
                    android:id="@+id/statCornersA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_smaller"
                    android:layout_marginRight="@dimen/margin_small"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/holo_blue_dark" />

                <TextView
                    android:id="@+id/statCornersB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_smaller"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/holo_red_dark" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="cornersB"
                    android:text="@string/Corners" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="foulsA"
                    android:text="@string/Fouls" />

                <TextView
                    android:id="@+id/statfoulsA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_smaller"
                    android:layout_marginRight="@dimen/margin_small"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/holo_blue_dark" />

                <TextView
                    android:id="@+id/statfoulsB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_smaller"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/holo_red_dark" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="foulsB"
                    android:text="@string/Fouls" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="resetall"
            android:text="@string/Reset" />
    </LinearLayout>

</ScrollView>

